<resources>
    <string name="app_name">Midterm 07590480</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_to_facebook">Login To Facebook</string>
    <string name="add_story">Add Story</string>
    <string name="view_as">View As</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="more">More</string>
    <string name="goes_to">Goes to</string>
    <string name="lives_in">Lives in</string>
    <string name="from">From</string>
    <string name="welcome2">Welcome Chayanon Tongkien</string>
    <string name="welcome1">Welcome Promlert Lovichit</string>
    <string name="invalid">Invalid username or password</string>
</resources>
